styles.css
* {
  font-family: "Ubuntu Mono", monospace;
  color: #2c2c2c;
}

h1 {
  font-size: 50px;
  filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
}

p {
  color: #e3e3e2;
  filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
}

span.red {
  color: #d30202;
}

span.green {
  color: #005e00;
}

span.black {
  color: black;
  font-family: Arial, Helvetica, sans-serif;
}

span.orange {
  color: #a35d00;
}

img {
  filter: drop-shadow(5px 5px 2px #000000);
}

.bg {
  margin: 0;
  background: transparent;
  width: 100%;
  height: 100%;
}

#background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-image: url("blueprint-texture-free-background-thumb33.png");
  background-size: cover;
  background-position: center;
  z-index: -2;
}

#overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: rgba(82, 151, 204, 0.851);
  z-index: -1;
}

#sticky-header {
  display: flex;
  justify-content: space-between;
  background: rgba(137, 207, 240, 0.9450980392);
  position: fixed;
  width: 100%;
  height: 60px;
  top: 0;
  background-image: linear-gradient(to bottom, rgba(137, 207, 240, 0.944), transparent);
  -webkit-mask-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.682), transparent);
  mask-image: linear-gradient(to bottom, rgb(255, 255, 255), transparent);
}
#sticky-header #menu-button,
#sticky-header #home {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 60px;
  width: 60px;
}
#sticky-header i {
  font-size: 35px;
  opacity: 0.8;
}

#mobile-nav-background {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: rgba(44, 44, 44, 0.937254902);
  z-index: 100;
  opacity: 0;
  transform: scale(0.8);
  transition: opacity 0.2s ease, transform 0.1s ease-in-out;
}
#mobile-nav-background #nav-area {
  display: flex;
  flex-direction: column;
  background-color: rgba(255, 255, 255, 0.808);
  margin: 0 40px;
  height: auto;
  width: 100%;
}
#mobile-nav-background #nav-area #close {
  align-self: end;
  margin: 20px 20px 0;
  font-size: 30px;
}
#mobile-nav-background #nav-area #close:hover {
  color: #d30202;
}
#mobile-nav-background #selections {
  display: flex;
  flex-direction: column;
  height: auto;
  width: 100%;
  padding: 50px;
}
#mobile-nav-background #selections .nav-button {
  margin-top: 20px;
  font-size: 2rem;
  text-decoration: none;
  padding: 30px 0;
}

#greeting {
  display: flex;
  flex-direction: column;
  margin-top: 60px;
  justify-content: center;
  text-align: center;
}
#greeting p {
  margin-top: 40px;
}

#stick-guy {
  filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
}

#empty-div {
  width: 100%;
  height: 400px;
}

#empty-div2 {
  width: 100%;
  height: 200px;
  border-top: 3px double white;
}

#about-me,
#projects,
#contact-me {
  margin: 0 30px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}
#about-me p,
#projects p,
#contact-me p {
  text-align: start;
}

#contact-me p {
  text-align: center;
}

#projects img {
  margin: 0 0 20px;
  max-height: 275px;
  max-width: 350px;
  width: auto;
  height: auto;
  max-width: 100%;
  align-self: center;
}

#contact-links {
  margin: 50px 0;
  display: flex;
  justify-content: space-between;
  filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
}
#contact-links i {
  font-size: 50px;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.arm {
  animation: wave 2s infinite;
  transform-origin: 100px 90px;
  /* Set the origin point for the arm rotation */
}

@keyframes wave {
  0% {
    transform: rotate(60deg);
  }
  50% {
    transform: rotate(90deg);
  }
  100% {
    transform: rotate(60deg);
  }
}/*# sourceMappingURL=styles.css.map */

